# FullStackMagazine

./: README.md  docker-compose.yml  nginx.conf  startup.sh
backend/: Dockerfile  env.example  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1733abe24b15_.py
backend/api/v1/: admin.py  card.py  delete_method.py  get_method.py  promocode.py  set_method.py  tgbot.py
backend/core/: schemas.py  settings.py
backend/core/database/: base.py  model.py  requests.py
backend/service/: admin.py  card.py  promocode.py  tgbot.py
frontend/: Dockerfile  nginx.conf  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/ButtonNetWork/: ButtonNetWork.tsx
frontend/src/components/Card/: ProductCard.tsx  ProductList.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/components/MenuStart/: MenuStart.tsx
frontend/src/components/ModalWin/: ModalWin.tsx
frontend/src/components/Slices/: ProductSlice.ts  UserByProductSlice.ts
frontend/src/hooks/: reduxHooks.ts
frontend/src/store/: store.ts
frontend/src/types/: menutypes.ts
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
prometheus/: prometheus.yml
